# Chip8-Emulator

./: .gitignore  CMakeLists.txt  Chip8.cpp  Chip8.h  LICENSE  README.md
src/: Chip8.cpp  Platform.cpp  main.cpp
src/includes/: Chip8.h  Platform.h
